<resources>
    <string name="app_name">Exodus</string>
    <string name="play">Play</string>
    <string name="shop">Shop</string>
    <string name="exodus">EXODUS</string>
    <string name="instructions">Instructions</string>
    <string name="options">Options</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="pistol">Pistol</string>
    <string name="submachine">Submachine</string>
    <string name="musket">Musket</string>
    <string name="rifle">Rifle</string>
    <string name="sniper">Sniper</string>
    <string name="machine_gun">Machine gun</string>
    <string name="instructions_text">The goal of the game is to stay alive for as long as possible and defeat all enemies that come your way!</string>
    <string name="moving_player">Moving player</string>
    <string name="touch_to_shoot">Touch to shoot</string>
    <string name="todo">TODO</string>
    <string name="sound">Sound</string>
    <string name="difficulty">Difficulty</string>
    <string name="credits">Credits</string>
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="game_over">Game over</string>
    <string name="score">Score:</string>
    <string name="best_score">Best score:</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play again</string>
    <string name="quit">Quit</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign up</string>
    <string name="damage">Damage</string>
    <string name="fire_rate">Fire rate</string>
    <string name="speed">Speed</string>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
