<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@color/mainmenu">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:background="@color/player"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/titan_one"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/instructions_text"
                android:textSize="17sp"
                android:fontFamily="@font/titan_one"
                android:padding="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/moving_player"
                        android:textSize="16sp"
                        android:fontFamily="@font/titan_one"
                        android:textAlignment="center" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@drawable/joystick_img"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/todo" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/touch_to_shoot"
                        android:textSize="16sp"
                        android:fontFamily="@font/titan_one"
                        android:textAlignment="center" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@drawable/touch_img"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/todo" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>