<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:theme="@style/AppTheme">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:background="@color/bullet"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/titan_one"
                android:text="@string/paused"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_resume"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/resume"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textColor="@color/bullet"
                    android:minHeight="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <Button
                    android:id="@+id/btn_restart"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/restart"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/bullet"
                    android:minHeight="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_mainmenu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/titan_one"
                    android:text="@string/quit"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="@color/bullet"
                    android:minHeight="0dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>