<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/mainmenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pop_up"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/titan_one"
            android:gravity="center_horizontal"
            android:text="@string/shop"
            android:textSize="30sp" />


        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:elevation="6dp"
                            app:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/pistol"
                                    android:contentDescription="@string/pistol" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:elevation="6dp"
                            app:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/uzi_block"
                                    android:contentDescription="@string/submachine" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:elevation="6dp"
                            app:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/musket_block"
                                    android:contentDescription="@string/musket" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/rifle_block"
                                    android:contentDescription="@string/rifle" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/sniper_block"
                                    android:contentDescription="@string/sniper" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="12dp"
                                android:paddingRight="12dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="100dp"
                                    android:src="@drawable/machine_block"
                                    android:contentDescription="@string/machine_gun" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>