<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainmenu"
    tools:context=".menupanel.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_play"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_effect"
        android:fontFamily="@font/titan_one"
        android:text="@string/play"
        android:textColor="@color/background"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_shop"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ripple_effect"
        android:fontFamily="@font/titan_one"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/shop"
        android:textColor="@color/background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_scores"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/icon_highscore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/icon_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_options" />

    <Button
        android:id="@+id/btn_options"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/icon_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/titan_one"
        android:text="@string/exodus"
        android:textColor="@android:color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>