<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:theme="@style/AppTheme">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:background="@color/player"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/titan_one"
                android:text="@string/game_over"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titan_one"
                        android:text="@string/score"
                        android:textAlignment="textEnd"
                        android:textAllCaps="true"
                        android:paddingRight="10dp"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".6">

                    <TextView
                        android:id="@+id/score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titan_one"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:paddingLeft="10dp"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titan_one"
                        android:text="@string/best_score"
                        android:textAlignment="textEnd"
                        android:textAllCaps="true"
                        android:paddingRight="10dp"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".6">

                    <TextView
                        android:id="@+id/best_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titan_one"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:paddingLeft="10dp"
                        android:textSize="20sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <Button
                        android:id="@+id/btn_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:fontFamily="@font/titan_one"
                        android:text="@string/main_menu"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textColor="@color/player"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:minHeight="0dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <Button
                        android:id="@+id/btn_playagain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:fontFamily="@font/titan_one"
                        android:text="@string/play_again"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/player"
                        android:layout_centerHorizontal="true"
                        android:minHeight="0dp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>